<resources>
    <string name="app_name">CEProjekt</string>
    <string name="hello_world_text">0</string>

    <string name="buttonOne">Connect to iPhone</string>

    <string name="buttonTwo">Connect to Raspberry</string>

    <string name="buttonThree">receive Scan</string>

    <string name="submitButton">send to Raspberry Pi</string>
    <string name="backButton">back</string>
    <string name="cancelButton">cancel</string>
    <string name="networkInfoHeading">Network information</string>

    <string name="password">Password</string>

    <string name="wifiName">Name of the wifi</string>


</resources>
